--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
         <div class="glass-container">
             <h1>404</h1>
             <p class="error">Oops! The page you're looking for might be in another kitchen.</p>
-            <button onclick="goBack()">Go Back</button>
+            <button onclick="goBack()">Go Back.</button>
         </div>
     </div>
     <script>
