--- a/Header/header.html
+++ b/Header/header.html
@@ -18,7 +18,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/day9/index.php">Home</a>
+        <a class="navbar-brand" href="/ABC/index.php">Home</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -36,7 +36,7 @@
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="/day9/Create/insert.php"
+                href="/ABC/Create/insert.php"
                 >ADD USER</a
               >
             </li>
