insert/delete/update fix

--- a/Header/header.html
+++ b/Header/header.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Day 9</title>
+    <title>Title</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
