--- a/Header/header.html
+++ b/Header/header.html
@@ -19,6 +19,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="/ABC/index.php">Home</a>
+        <a class="navbar-brand" href="/ABC/index.php">Home2</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -31,21 +32,26 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav ms-auto"> <!-- Added 'ms-auto' for right alignment -->
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="/ABC/Create/insert.php"
-                >ADD USER</a
-              >
+              <a class="nav-link active" aria-current="page" href="/ABC/Create/insert.php">ADD USER</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a href="signup.php" class="nav-link"><span class="glyphicon glyphicon-user"></span> Sign Up</a>
+            </li>
+            <li class="nav-item">
+              <a href="login.php" class="nav-link"><span class="glyphicon glyphicon-log-in"></span> Login</a>
+            </li>
+            <li class="nav-item">
+              <a href="logout.php" class="nav-link"><span class="glyphicon glyphicon-log-out"></span> Logout</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-rbSr8qBPJysdjL4zmgk+Zn8+dAiR8+2fC3aNq+66eAXmC5NQ6ZdaIhe6LoD3+t9e" crossorigin="anonymous"></script>
   </body>
 </html>
